Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T5024091/T5024091.out
T5024091.java:12:29: compiler.err.cant.access: java.lang.StringBuilder, (compiler.misc.user.selected.completion.failure)
1 error
